k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-node-app
  labels:
    app: backstage-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backstage-node-app
  template:
    metadata:
      labels:
        app: backstage-node-app
    spec:
      containers:
      - name: backstage-node-app
        image: felipeneuhauss/node-app:v2
        ports:
        - containerPort: 3000
