k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-node-app
spec:
  selector:
    app: backstage-node-app # this label needs to match with the label in the deployment (e.g) app: backstage-node-app
  ports:
    - name: http
      protocol: TCP
      port: 3000 # this is the port that will be exposed to the outside world
      targetPort: 3000 # container port
    
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000 # container port
