k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: backstage-node-app.io # this is the domain name that will be used to access the application
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage-node-app
            port:
              number: 80
